---
source: src/to_execution_plan.rs
description: "Plan {\n    execution_time: None,\n    root: SequentialScan(\n        SequentialScanNode {\n            base: BaseNode {\n                execution_time: None,\n                actual_rows: None,\n                children: [],\n                output: [\n                    Field {\n                        table_name: Some(\n                            \"r\",\n                        ),\n                        field_name: \"a\",\n                    },\n                ],\n            },\n            relation: \"r\",\n            opt_filter: Some(\n                \"a>=2\",\n            ),\n        },\n    ),\n    aliases: {},\n}"
---
ProjectionExec: expr=[a@0 as a]
  FilterExec: a@0 >= 2
    MemoryExec: partitions=1, partition_sizes=[1]
